Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.10.11 (?/?/?):
	Stuff:
	* Things.

version 2.10.10 (10/22/14):
	General:
	* Check the basic constraints extension when validating SSL/TLS
	  certificates. This fixes a security hole that allowed a malicious
	  man-in-the-middle to impersonate an IM server or any other https
	  endpoint. This affected both the NSS and GnuTLS plugins. (Discovered
	  by an anonymous person and Jacob Appelbaum of the Tor Project, with
	  thanks to Moxie Marlinspike for first publishing about this type of
	  vulnerability. Thanks to Kai Engert for guidance and for some of the
	  NSS changes) (CVE-2014-3694)
	* Allow and prefer TLS 1.2 and 1.1 when using the NSS plugin for SSL.
	  (Elrond and Ashish Gupta) (#15909)

	libpurple3 compatibility:
	* Encrypted account passwords are preserved until the new one is set.
	* Fix loading Google Talk and Facebook XMPP accounts.

	Windows-Specific Changes:
	* Don't allow overwriting arbitrary files on the file system when the
	  user installs a smiley theme via drag-and-drop. (Discovered by Yves
	  Younan of Cisco Talos) (CVE-2014-3697)
	* Updates to dependencies:
		* NSS 3.17.1 and NSPR 4.10.7

	Finch:
	* Fix build against Python 3. (Ed Catmur) (#15969)

	Gadu-Gadu:
	* Updated internal libgadu to version 1.12.0.

	Groupwise:
	* Fix potential remote crash parsing server message that indicates that
	  a large amount of memory should be allocated. (Discovered by Yves Younan
	  and Richard Johnson of Cisco Talos) (CVE-2014-3696)

	IRC:
	* Fix a possible leak of unencrypted data when using /me command
	  with OTR. (Thijs Alkemade) (#15750)

	MXit:
	* Fix potential remote crash parsing a malformed emoticon response.
	  (Discovered by Yves Younan and Richard Johnson of Cisco Talos)
	  (CVE-2014-3695)

	XMPP:
	* Fix potential information leak where a malicious XMPP server and
	  possibly even a malicious remote user could create a carefully crafted